--- a/styles.css
+++ b/styles.css
@@ -30,15 +30,57 @@ main{
     display:flex;
     flex-direction: column;
     align-items: center;
+    position:relative;
     justify-content: center;
 }
 
+#attention-container{
+    position: absolute;
+    top:0;
+    left:0;
+    height:350px;
+    width:100%;
+
+}
+
 footer,header{
-    height:75px;
+    height:95px;
     border:2px solid red;
     width:100%;
 }
 footer{
     position: absolute;
     bottom:0;
+}
+
+
+
+
+
+
+/* profile image */
+
+#img-pro{
+    position:absolute;
+    top:0;
+    left:0;
+    height:100%;
+    width:270px;
+    /* border-radius: 0 20px 20px 0; */
+}
+
+/* media query portrait mobile (width) */
+@media screen and (max-width:650px) {
+    body {
+        padding:0 .5rem;
+    }
+    #img-pro{
+        top:unset;
+        left:unset;
+        bottom:0;
+        right:0 !important;
+        /* border-radius: 20px 0 0 20px; */
+        height:175px;
+        width:135px;
+    }
 }
