--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
 }
 
 /* background  colors */
@@ -38,7 +40,7 @@ main{
     position: absolute;
     top:0;
     left:0;
-    height:350px;
+    height:60vh;
     width:100%;
 
 }
@@ -48,26 +50,80 @@ footer,header{
     border:2px solid red;
     width:100%;
 }
-footer{
+/* ---------------- header/navigation ---------------- */
+#nav{
+    width:75%;
+    height:75px;
+    border:2px solid red;
     position: absolute;
-    bottom:0;
+    display:flex;
+    flex-direction: column;
+    align-items: end;
+    justify-content: end;
+    padding-right:1.5rem;
+    right:0;
+    top:0;
+
 }
+#nav > #nav-list-container{
+    display:flex;
+    justify-content: center;
+    align-items: end;
+    padding: 0 0 .5rem 0;
+}
+.nav-list-item>a{
+    padding:.5rem 1.5rem;
+    margin-left:5px;
+    background:silver;
+}
+/* ---------------- header/navigation ---------------- */
 
 
 
-
-
-
+/* ---------------- attention getter ---------------- */
 /* profile image */
 
 #img-pro{
+    transition:.5s;
     position:absolute;
     top:0;
     left:0;
-    height:100%;
-    width:270px;
+    height:300px;
+    width:234px;
+    z-index: 999;
     /* border-radius: 0 20px 20px 0; */
 }
+.slogan-actual-top,
+.slogan-actual-bottom{
+    width:100%;
+    position:absolute;
+    left:0;
+    padding:.75rem .5rem;
+    font-size:18pt;
+    color:#fff;
+    font-weight: bold;
+    z-index: 998;
+    background:#000;
+}
+.slogan-actual-bottom{
+    bottom:0;
+    border-top:.5px solid #fff;
+    text-align: left;
+}
+.slogan-actual-top{
+    top:0;
+    border-bottom:.5px solid #fff;
+    text-align: right;
+}
+
+/* ---------------- attention getter ---------------- */
+
+
+/* ---------------- main - rows ---------------- */
+
+
+
+/* ---------------- main - rows ---------------- */
 
 /* media query portrait mobile (width) */
 @media screen and (max-width:650px) {
