--- a/styles.css
+++ b/styles.css
@@ -22,33 +22,37 @@ body{
     display:flex;
     flex-direction: column;
     align-items: center;
+    scroll-behavior: smooth;
     justify-content: center;
 }
 
 main{
-    border:2px solid rgb(255, 200, 0);
     height:100%;
     width:100%;
-    display:flex;
+    /* display:flex;
     flex-direction: column;
     align-items: center;
-    position:relative;
-    justify-content: center;
+    justify-content: start; */
+    border:4px solid yellow;
+
 }
 
 #attention-container{
-    position: absolute;
-    top:0;
-    left:0;
-    height:60vh;
+    height:55vh;
     width:100%;
-
+    overflow: hidden;
+    position:relative;
 }
 
 footer,header{
     height:95px;
     border:2px solid red;
     width:100%;
+}
+footer {
+    position:absolute;
+    left:0;
+    bottom:0;
 }
 /* ---------------- header/navigation ---------------- */
 #nav{
@@ -60,10 +64,12 @@ footer,header{
     flex-direction: column;
     align-items: end;
     justify-content: end;
-    padding-right:1.5rem;
+    padding-right:.25rem;
     right:0;
     top:0;
-
+}
+#hamburger-container{
+    display:none;
 }
 #nav > #nav-list-container{
     display:flex;
@@ -126,9 +132,13 @@ footer,header{
 /* ---------------- main - rows ---------------- */
 
 /* media query portrait mobile (width) */
-@media screen and (max-width:650px) {
+@media screen and (max-width:1010px) {
     body {
         padding:0 .5rem;
+    }
+
+    #nav{
+        display:none;
     }
     #img-pro{
         top:unset;
@@ -138,5 +148,43 @@ footer,header{
         /* border-radius: 20px 0 0 20px; */
         height:175px;
         width:135px;
+    }
+
+    #hamburger-container{
+        display:block;
+        position:absolute;
+        top:5px;
+        right:12px;
+        background:red;
+        height:50px;
+        width:50px;
+        display:flex;
+        flex-direction: column;
+        align-items:center;
+        justify-content: center;
+        gap:5px;
+        transition: .2s;
+    }
+    #hamburger-container:hover{
+        cursor:pointer;
+        transform:scale(.97)
+    }
+    .hamburger-span{
+        width:66%;
+        height:5px;
+        background:#000;
+        transition: .25s;
+    }
+
+    .s1-rotate{
+        transform:translate(0,10px) rotate(-45deg);
+    }
+    .s2-disappear{
+        opacity:0;
+        pointer-events: none;
+        transform:translate(-100px,0);
+    }
+    .s3-rotate{
+        transform:translate(0,-10px) rotate(45deg);
     }
 }
