--- a/styles.css
+++ b/styles.css
@@ -23,14 +23,17 @@
     --bg-tint:#fff;
     --bg-shade:#000;
 }
+
+/* colors */
 :root{
     --col-primary:#000;
     --col-secondary:#fff;
     --col-tertiary:var(--bg-secondary);
 }
-
+/* fonts */
 :root {
-    --font-header:
+    --font-header:'Merriweather',Arial, Helvetica, sans-serif;
+    --font-header-italic:'Merriweather-italic', Arial, Helvetica, sans-serif !important;
 }
 
 body{
@@ -47,29 +50,39 @@ body{
 main{
     height:100%;
     width:100%;
-    /* display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start; */
     border:4px solid var(--bg-secondary);
-
 }
 
-#attention-container{
-    height:100%;
-    width:100%;
-    overflow: hidden;
-    position:relative;
+#home{
     display:flex;
     flex-direction:column;
     align-items: end;
     padding:0 .75rem;
-    justify-content: start;
+    justify-content: end;
+    opacity:1 !important;
+}
+.section-gen{
+    border:2px solid cyan;
+    transition:.5s;
+    height:100%;
+    width:100%;
+    overflow: hidden;
+    position:relative;
+    margin-top:.95rem;
+    opacity:0;
 }
 
+.appear-section {
+  opacity:1;
+}
+
+
 #cover-phrase-container{
-    border:3px solid cyan;
     width:60%;
+    display:flex;
+    flex-direction: row;
+    align-items: end;
+    justify-content: end;
 }
 #cover-phrase{
     color:#fff;
@@ -78,9 +91,9 @@ main{
     min-width:300px;
     max-width:700px;
     text-align: right;
-    margin-top:4.5rem;
-    font-family:'Merriweather',Arial, Helvetica, sans-serif;
+    font-family:var(--font-header);
     letter-spacing:.95px;
+    margin-bottom:5rem;
 }
 #cover-phrase>p{
     display:inline;
@@ -89,7 +102,7 @@ main{
 .italic-word {
     font-size:55px;
     color:var(--col-tertiary);
-    font-family: 'Merriweather-italic', Arial, Helvetica, sans-serif !important;
+    font-family: var(--font-header-italic)
 }
 
 footer,header{
@@ -147,7 +160,7 @@ footer {
     width:270px;
     z-index: 999;
     border-radius: 50%;
-    border:1rem solid var(--bg-secondary);;
+    border:1rem solid var(--col-tertiary);
 }
 .slogan-actual-top,
 .slogan-actual-bottom{
@@ -160,6 +173,7 @@ footer {
     font-weight: bold;
     z-index: 998;
     background:#000;
+    font-family:var(--font-header-italic)
 }
 .slogan-actual-bottom{
     bottom:0;
@@ -168,7 +182,7 @@ footer {
 }
 .slogan-actual-top{
     top:0;
-    border-bottom:.5px solid #fff;
+    /* border-bottom:.5px solid #fff; */
     text-align: right;
 }
 
@@ -201,7 +215,7 @@ footer {
         /* border-radius: 20px 0 0 20px; */
         height:200px;
         width:155px;
-        bordeR:8px solid var(--bg-secondary);;
+        bordeR:8px solid var(--col-tertiary);
     }
 
     #hamburger-container{
@@ -244,29 +258,42 @@ footer {
     }
 
     .slogan-actual-top,
-.slogan-actual-bottom{
-    font-size:11pt;
-}
-#attention-container{
-    align-items:start;
-    justify-content:end;
-}
-#cover-phrase-container{
-    width:unset;
-}
-#cover-phrase{
-    text-align:left;
-    font-size:30pt !important;
-    margin-bottom:3rem;
-}
-.italic-word {
-    font-size:35px;
-}
+    .slogan-actual-bottom{
+        font-size:11pt;
+    }
+    #home{
+        align-items:start;
+        justify-content:end;
+    }
+
+    #cover-phrase{
+        text-align:start;
+        font-size:31pt !important;
+        margin-bottom:3rem;
+    }
+    .italic-word {
+        font-size:35px;
+    }
 }
 
 @media screen and (max-width: 490px) {
     #cover-phrase{
-    text-align:left;
     font-size:21pt !important;
 }
+    #cover-phrase{
+        text-align:center;
+        font-size:21pt !important;
+        margin-bottom:3rem;
+    }
+    #cover-phrase-container{
+        width:100%;
+    }
 }
+
+@media screen and (max-width:1000px) and (max-height:500px){
+        #cover-phrase{
+        text-align:left;
+        font-size:21pt !important;
+        margin-bottom:3rem;
+    }
+}   
