convert puzzle to png

--- a/backgrounds.css
+++ b/backgrounds.css
@@ -36,7 +36,7 @@
 
 /* problem */
 .problem {
-  background-image:url('./media/concept/puzzle.avif');
+  background-image:url('./media/concept/puzzle.png');
   background-size:cover;
   background-repeat:no-repeat;
   transition:.25s;
