--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ html {
     --bg-tertiary:#f00;
     --bg-tint:#fff;
     --bg-shade:#000;
+    --bg-slogan:#464f58d4;
 }
 
 /* colors */
@@ -274,7 +275,8 @@ footer{
     color:#fff;
     font-weight: bold;
     /* z-index: 997; */
-    background:#000;
+    border-bottom:none;
+    background-image:linear-gradient(100deg,#3537435a,var(--bg-slogan),#4c575e75);
     font-family:var(--font-header-italic)
 }
 .slogan-actual-bottom{
