--- a/styles.css
+++ b/styles.css
@@ -136,14 +136,16 @@ main{
     width:60%;
     display:flex;
     flex-direction: row;
-    align-items: end;
+    align-items: center;
     justify-content: end;
     padding:1rem;
+    height:100%;
+    /* border:2px solid red; */
 }
 #cover-phrase{
     color:#fff;
     z-index: 998;
-    font-size:42pt;
+    font-size:36pt;
     min-width:300px;
     max-width:700px;
     text-align: right;
@@ -180,15 +182,17 @@ footer{
 }
 /* ---------------- learn more ---------------- */
 .learn-more {
+    text-decoration:underline;
+    text-decoration-thickness: .25px;
+    text-decoration-line:underline;
     padding:.75rem 1.25rem;
     border-radius: 16px;
-    width:275px;
     background:var(--col-tertiary);
     border:none;
     display:flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     font-family:var(--font-header);
     font-size:21pt;
     border:none;
@@ -199,6 +203,7 @@ footer{
 .learn-more-config{
     top:75%;
     left:100px;
+    display:inline;
 }
 .learn-more:hover{
     background:#333;
@@ -271,7 +276,8 @@ footer{
     width:270px;
     z-index: 997;
     border-radius: 50%;
-    border:1rem solid var(--col-tertiary);
+    /* border:.5rem solid var(--col-tertiary); */
+    box-shadow: 0 1.25px 12px .9px var(--bg-secondary);
 }
 .slogan-actual-top,
 .slogan-actual-bottom{
@@ -280,6 +286,7 @@ footer{
     left:0;
     padding:.75rem .5rem;
     font-size:18pt;
+    letter-spacing:1.5px;
     color:#fff;
     font-weight: bold;
     /* z-index: 997; */
@@ -298,14 +305,31 @@ footer{
     text-align: right;
 }
 
-/* ---------------- attention getter ---------------- */
+
+/* certification */
+#cert {
+    color:var(--bg-tint);
+    text-align: right;
+    text-shadow: .25px .25px rgb(0, 0, 0);
+    font-family: var(--font-header-italic);
+    
+}#certification{
+    margin-bottom:3rem;
+    letter-spacing: 1.15px;
+    font-size:11pt;
+    width:50%;
+    min-width:200px;
+}
 
 
-/* ---------------- main - rows ---------------- */
-
-
-
-/* ---------------- main - rows ---------------- */
+/* icons */
+.learn-more-config > img {
+    height:25px;
+    width:25px;
+    float:right;
+    margin-top:4px;
+    margin-left:8px;
+}
 
 /* media query portrait mobile (width) */
 @media screen and (max-width:1010px) {
@@ -338,19 +362,14 @@ footer{
     }
     .learn-more-config{
         left:unset;
-        right:50px;
+        right:25px;
         bottom: 50px;
         top:unset;
     }
     .learn-more {
     padding:.75rem .88rem;
     border-radius: 16px;
-    width:195px;
     border:none;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     font-family:var(--font-header);
     font-size:16pt;
 }
@@ -406,7 +425,6 @@ footer{
         /* border-radius: 20px 0 0 20px; */
         height:268px;
         width:205px;
-        bordeR:8px solid var(--col-tertiary);
     }
 
     #hamburger-container{
@@ -463,6 +481,7 @@ footer{
      #cover-phrase-container{
         width:66%;
         margin-bottom:2.25rem;
+        align-items:end;
      }
      .problem-col{
         background:#333333cb;
@@ -470,16 +489,29 @@ footer{
     }
     #cover-phrase{
         text-align:start;
-        font-size:31pt !important;
+        font-size:26pt !important;
         margin-bottom:3rem;
     }
     .italic-word {
         font-size:35px;
     }
+    #cert{
+        text-align: left;
+    }
 }
 
 @media screen and (max-width: 490px) {
 
+    #certification{
+    font-family: var(--font-header);
+    letter-spacing: 1.15px;
+    font-size:9pt;
+    width:50%;
+    min-width:200px;
+    position:absolute;
+    top:88px;
+    left:5px;
+}
     #problem {
         flex-direction: column;
         align-items: center;
@@ -494,7 +526,7 @@ footer{
     }
     .learn-more-config{
         right:unset;
-        bottom:175px;
+        bottom:245px;
         left:25%;
     }
     #home {
@@ -504,7 +536,7 @@ footer{
     }
     #cover-phrase{
         text-align:start;
-        font-size:18pt !important;
+        font-size:16pt !important;
         margin-bottom:3rem;
     }
     #cover-phrase-container{
