--- a/styles.css
+++ b/styles.css
@@ -352,8 +352,10 @@ justify-content: center;
 .section-header {
 }
 .section-subheader {
+
 }
-.alone,.take-action {
+
+.alone,.take-action,.servicing {
     /* border:2px solid green; */
     display:flex;
     width:100%;
@@ -361,6 +363,12 @@ justify-content: center;
     color:var(--col-secondary);
     gap:1rem;
     padding:0 .75rem;
+}
+.servicing{
+    padding:.5rem .75rem !important;
+    text-align:center;
+    justify-content: center;
+    background:var(--bg-description);
 }
 .alone{
     position:absolute;
@@ -373,11 +381,8 @@ justify-content: center;
     left:5px;
     justify-content: start;
 }
-/* .rotate-para{
-transform:rotate(20deg);
-} */
+
 .section-subheader>h2 {
-/* background-color:#000; */
 font-size:32pt;
 font-family: var(--font-header);
 transition: .5s;
@@ -394,10 +399,8 @@ background:none !important;
 .section-col{
     overflow:hidden;
     height:100%;
-    width:59%;
-    /* border:3px solid red; */
+    width:50%;
     padding:.75rem .5rem;
-    background:var(--bg-description);
     position:relative;
 }
 
@@ -418,6 +421,22 @@ background:none !important;
 }
 
 
+#problem > .section-col{
+    width:59%;
+    background:var(--bg-description);
+}
+#services{
+    display:flex;
+    flex-direction: column;
+}
+#services>#column-container{
+    height:100%;
+    width:100%;
+    /* border:2px solid red; */
+}
+#services > #column-container > .section-col{
+    width:100%;
+}
 
 /* --------------------------------------- Sections in detail --------------------------------------- */
 
@@ -427,9 +446,66 @@ background:none !important;
 
 
 
+/* --------------------------------------- cloud --------------------------------------- */
+
+.cloud-container {
+  position: relative; /* Essential for positioning the cloud parts */
+  /* border:2px solid red; */
+  border-bottom:2px solid var(--bg-shade);
+  /* height: 50%; */
+  padding:.75rem 0;
+  width:100%;
+  display:flex;
+  align-items: start;
+  flex-wrap:wrap;
+  justify-content: center;
+  overflow-x:scroll;
+  overflow-y:hidden;
+  gap:.5rem;
+}
+.cloud>p {
+    z-index:999;
+    width:185px;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none; /* Hides the scrollbar */
+}
+.cloud {
+  background-color: white;
+  border-radius:75px; /* Creates the main rounded base */
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2); /* Optional: Add a subtle shadow */
+  display:flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  padding:.25rem;
+  font-family: var(--font-header);
+  height: 75px; 
+  transition:1.5s;
+}
+
+
+.cloud-left{
+    transform:translate(-100%,0);
+    transition:.5s;
+}
+.cloud-right{
+    transform:translate(100%,0);
+    transition:.5s;
+}
+.cloud::before,
+.cloud::after {
+  content: '';
+  position:absolute;
+  background-color: white;
+  z-index: 1; /* Ensure they appear above the main cloud body */
+}
 
 
 
+
+/* --------------------------------------- cloud --------------------------------------- */
 
 
 
@@ -462,21 +538,21 @@ background:none !important;
     grid-template-rows: 1fr 1fr;
     align-items: center;
     justify-content: center;
-    grid-template-areas:"c a "
+    grid-template-areas:"c a"
                         "b b";
 }
 .a { grid-area: a; }
 .b { grid-area: b; }
-.c { grid-area: c;display:none; }
+.c { grid-area: c;
+    display:none; }
 
  .section-col>.description>p {
-        text-align: left;
-    }
+    text-align: left;
+}
 .section-col{
     height:100%;
-    width:100%;
     padding:.75rem .5rem;
-    background:var(--bg-description);
+    width:100% !important;
 }
 #counsel {
     transform:translate(0,13.5px) !important;
@@ -619,10 +695,6 @@ background:none !important;
         margin-bottom:2.25rem;
         align-items:end;
      }
-     .problem-col{
-        background:#333333cb;
-        color:var(--col-secondary);
-    }
     #cover-phrase{
         text-align:start;
         font-size:26pt !important;
@@ -642,18 +714,28 @@ background:none !important;
         align-items: end;
     }
     .section-subheader>h2{
-        font-size:22pt;
+        font-size:21pt;
     }
-    .section-col{
-        width:90%;
+    #services > .section-subheader{
+        display:block;
+}
+    #problem>.section-col{
+        width: 90% !important;;
     }
     .section-col>.description>p {
         text-align: left;
+    }
+    #services > #column-container {
+        grid-template-columns: 1fr;
     }
     .alone,.take-action{
         flex-direction: row;
         align-items: center;
         gap:.6rem;
+    }
+    .servicing{
+        justify-content: center;
+        align-items: center;
     }
     .alone{
         justify-content: start;
@@ -661,6 +743,7 @@ background:none !important;
     .take-action{
         justify-content: end;
     }
+    
 }
 @media screen and (max-width: 531px) {
 
@@ -673,8 +756,7 @@ background:none !important;
     position:absolute;
     top:88px;
     left:5px;
-}
-
+    }
     .problem-col{
         width:98%;
     }
@@ -716,7 +798,34 @@ background:none !important;
         left:0;
         top:105px !important;
     }
+    .cloud {
+    width:88%;
 }
+    
+}
+@media screen and (max-width: 390px) {
+
+#problem>.section-col{
+        width:100% !important;
+    }
+.servicing{
+    font-size:16pt !important;
+}
+.servicing > p {
+    font-size:21pt !important;
+}
+#nav-mobile{
+        top:143.5px;
+    }
+.fixed-nav{
+    position:fixed;
+    left:0;
+    top:140px !important;
+}
+
+}
+
+
 /* landscape phone */
 @media screen and (max-width:1000px) and (max-height:500px){
         #cover-phrase{
@@ -766,21 +875,6 @@ background:none !important;
         padding:12px 0;
     }
 }
-@media screen and (max-width: 390px) {
-.alone,.take-action{
-    display:inline;
-}
-#nav-mobile{
-        top:143.5px;
-    }
-    .fixed-nav{
-        position:fixed;
-        left:0;
-        top:140px !important;
-    }
-
-}
-
 
 /* --------------------------------------- media query --------------------------------------- */
 
