--- a/backgrounds.css
+++ b/backgrounds.css
@@ -36,17 +36,24 @@
   width:100%;
 }
 
+
 /* concept backgrounds */
 .glass-card {
     background-color: rgba(255, 255, 255, 0.2); /* Semi-transparent white */
     backdrop-filter: blur(10px); /* Adjust blur intensity */
-    border: 1px solid rgba(255, 255, 255, 0.18);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    padding: 20px;
-    color: white; /* For content inside the glass element */
-    text-align: center;
+    /* box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37); */
     width: 100%;
     height: 100%;
+}
+
+.hands {
+  background-image:url('./media/concept/hands.png');
+  background-size:cover;
+  height:100%;
+  width:100%;
+  background-repeat:no-repeat;
+  background-position:0;
+  opacity:.33;
 }
 
 .frustrated{
