--- a/backgrounds.css
+++ b/backgrounds.css
@@ -47,6 +47,11 @@
 }
 
 .hands {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position:relative;
   background-image:url('./media/concept/hands.png');
   background-size:cover;
   height:100%;
